<resources>
  <string name="app_name">CardGame2</string>
  <string name="notes">NOTES</string>
  <string name="title_activity_note_detail">NoteDetailActivity</string>
  <string name="save">SAVE</string>
  <string name="edit">edit\n</string>
  <string name="title">title</string>
  <string name="start_typing">start_typing</string>
  <string name="title_activity_note_cell">note_cell</string>

  <string name="level_format">Level %d</string>
  <string name="xp_format">%d/%d XP</string>
  <string name="percentage_format">%.0f%%</string>


  <!-- Settings Categories -->
  <string name="general_settings">General</string>
  <string name="display_settings">Display</string>
  <string name="advanced_settings">Advanced</string>

  <!-- Language Settings -->
  <string name="language">Language</string>
  <string name="enable_disable_notifications">Enable/disable push notifications</string>

  <!-- Notification Settings -->
  <string name="notifications">Notifications</string>

  <!-- Display Settings -->
  <string name="dark_mode">Dark Mode</string>
  <string name="enable_dark_theme">Enable dark theme</string>
  <string name="text_size">Text Size</string>

  <!-- Advanced Settings -->
  <string name="reset_to_default">Reset to Default</string>
  <string name="reset_all_settings">Reset all settings to default values</string>
  <string name="terms_of_service">Terms of Service</string>
  <string name="privacy_policy">Privacy Policy</string>

  <!-- Common -->
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="reset_confirmation_title">Reset Settings</string>
  <string name="reset_confirmation_message">Are you sure you want to reset all settings to default values?</string>
  <string name="mana_5_10">Mana: 5/10</string>
  <string name="turn_time_30s">Turn Time: 30s</string>
  <string name="end_turn">End Turn</string>
  <string name="pikachu">Pikachu</string>
  <string name="attack_50">Attack: 50</string>
  <string name="hp_60">HP: 60</string>
</resources>