<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory app:title="@string/general_settings">

    <ListPreference
        app:key="language"
        app:title="@string/language"
        app:entries="@array/languages"
        app:entryValues="@array/language_codes"
        app:defaultValue="en"
        app:iconSpaceReserved="false"
        app:summary="%s"/>

    <SwitchPreference
        app:key="notifications"
        app:title="@string/notifications"
        app:summary="@string/enable_disable_notifications"
        app:defaultValue="true"
        app:iconSpaceReserved="false"/>

  </PreferenceCategory>

  <PreferenceCategory app:title="@string/display_settings">

    <SwitchPreference
        app:key="dark_mode"
        app:title="@string/dark_mode"
        app:summary="@string/enable_dark_theme"
        app:defaultValue="false"
        app:iconSpaceReserved="false"/>

    <ListPreference
        app:key="text_size"
        app:title="@string/text_size"
        app:entries="@array/text_sizes"
        app:entryValues="@array/text_size_values"
        app:defaultValue="medium"
        app:iconSpaceReserved="false"
        app:summary="%s"/>

  </PreferenceCategory>

  <PreferenceCategory app:title="@string/advanced_settings">

    <Preference
        app:key="reset_settings"
        app:title="@string/reset_to_default"
        app:iconSpaceReserved="false"
        app:summary="@string/reset_all_settings"/>

    <Preference
        app:key="terms_of_service"
        app:title="@string/terms_of_service"
        app:iconSpaceReserved="false"/>

    <Preference
        app:key="privacy_policy"
        app:title="@string/privacy_policy"
        app:iconSpaceReserved="false"/>

  </PreferenceCategory>

</PreferenceScreen>